<resources>
    <string name="app_name">VaxTrax</string>
    <string name="vaxTraxLogo">VaxTrax Logo</string>
    <string name="syringeLogo">SyringeLogo</string>
    <string name="vaccineBtn">Vaccine</string>
    <string name="vaccines">Vaccines</string>
    <string name="covidBtn">Covid-19</string>
    <string name="stage">Stage:</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="quizBtn">Take Covid Quiz</string>
    <string name="statsBtn">Latest Stats</string>
    <string name="guidelines">Guidelines</string>
    <string name="covidInfo">COVID-19 is a respiratory illness caused by a new virus.
        Symptoms include fever, coughing, a sore throat and shortness of breath. The virus can spread
        from person to person. Currently there is no treatment for COVID-19. It was first reported in
        December 2019 in Wuhan City in China. The people most at risk are people 65 or older and people with
        chronic conditions.</string>
    <string name="homeGuidelines">When at home:\n\n\u25E6 Cover your nose and mouth when sneezing and &#160;&#160;immediately
        dispose of used tissues.
        \n\u25E6 Regularly clean and disinfect frequently touched &#160;&#160;surfaces such as; table tops,
        light switches, door &#160;&#160;handles, phones, keyboards and toilets.
        \n\u25E6 Wash your hands regularly and avoid touching your &#160;&#160;&#160;eyes, nose and face with unwashed
        hands.
        \n\n When outside:
        \n\n\u25E6 Wear a cloth mask that covers your nose and mouth &#160;&#160;&#160;when going outside.
        \n\u25E6 Try to limit unnecessary errands and trips outside.
        \n\u25E6 Avoid areas that may be crowded such as a public park &#160;&#160;or shopping centre.
        \n\u25E6 Keep a 2.5m (6 feet) distance from other people when &#160;&#160;outside.
        \n\u25E6 Use sanitiser after touching door handles or other &#160;&#160;&#160;frequently touched objects.</string>
    <string name="copyRight">Copyright &#169; 2020 Vax Trax</string>
    <string name="global_stats">Global Stats</string>
    <string name="new_confirmed">New Confirmed:</string>
    <string name="total_confirmed">Total Confirmed:</string>
    <string name="new_deaths">New Deaths:</string>
    <string name="total_deaths">Total Deaths:</string>
    <string name="total_recovered">Total Recovered:</string>
    <string name="new_recovered">New Recovered:</string>
    <string name="country">Country:</string>
    <string name="description">Description</string>
    <string name="view_covid_19_statistics">View COVID-19 Statistics</string>
    <string name="vaccine_development">Vaccine Development</string>
    <string name="information_on_the_covid_19_pandemic">Information on the COVID-19 Pandemic</string>
    <string name="stages_of_vaccine_development">Stages of Vaccine Development</string>
    <string name="preclinical">Preclinical:</string>
    <string name="phase_1">Phase 1:</string>
    <string name="phase_2">Phase 2:</string>
    <string name="emergency_use_authorization">Emergency Use Authorization</string>
    <string name="preclinicaltv">This stage is used to refer to innovations that are currently not being tested in clincal trials. Clinical trials refer to working the the treatment with chemicals to understand reactions or conducting studies on human and non-human test subjects.</string>
    <string name="phaseOne">This stage refers to finding the most suitable dosage of the treatment through clincal trials of human subject in small groups between 20-80 people.</string>
    <string name="phaseTwo">Phase 2 is when trials are expanded and studies are done to understand their safety and efficacy in the human body with larger groups of people.</string>
    <string name="phaseThree">Phase 3 asseses the side-effects of the drugs and compares them to standard drugs currently in the market. This phase is used to guage the effectiveness and understand if they are causing any detrimental side-effects. </string>
    <string name="phaseFour">At this phase, the treatment is approved and licensed by the FDA, however there are ongoing studies being conducted.</string>
    <string name="emergencyUse">This stage means that the drug has been given approval to be made available to the public without having been through all phases of testing.</string>
    <string name="phase_3">Phase 3:</string>
    <string name="phase_4">Phase 4:</string>
    <string name="q8_which_area_of_covid_19_are_you_more_unfamiliar_with">Q8: Which area of Covid-19 are you more unfamiliar with?</string>
    <string name="q7_do_you_feel_overwhelmed_by_the_current_volume_of_data_being_presented_to_you_in_the_media_about_coronavirus">Q7: Do you feel overwhelmed by the current volume of data being presented to you in the media about coronavirus?</string>
    <string name="q6_would_you_like_to_know_about_the_vaccine_development_lifecycle">Q6: Would you like to know about the vaccine development lifecycle?</string>
    <string name="q5_are_you_interested_to_learn_more_about_this_pandemic_that_is_taking_the_world_by_storm">Q5: Are you interested to learn more about this pandemic that is taking the world by storm?</string>
    <string name="q4_would_you_rather_know_about_vaccine_developments_in_private_sectors_public_sectors_or_both">Q4: Would you rather know about vaccine developments in private sectors, public sectors or both?</string>
    <string name="q3_what_are_the_appropriate_steps_i_should_take_if_i_develop_covid_19_like_symptoms">Q3: What are the appropriate steps I should take if I develop COVID-19 like symptoms?</string>
    <string name="q2_what_is_the_most_common_symptom_of_covid_19">Q2: What is the most common symptom of COVID-19?</string>
    <string name="q1_what_country_has_the_most_number_of_active_covid_19_cases_currently_in_the_world">Q1: What country has the most number of active COVID-19 cases currently in the world?</string>
    <string name="vax_trax">Vax Trax</string>
    <string name="vaccine">Vaccine</string>
    <string name="virus">Virus</string>
    <string name="statistics">Statistics</string>
    <string name="quiz">Quiz</string>
    <string name="current_trends_in_your_country_and_around_the_world">Current trends in your country and around the world</string>
    <string name="prevention_methods">Prevention methods</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="none">None</string>
    <string name="both">Both</string>
    <string name="private_sector">Private sector</string>
    <string name="public_sector">Public Sector</string>
    <string name="drink_hot_water">Drink hot water</string>
    <string name="self_isolate_for_7_days">Self isolate for 7 days</string>
    <string name="self_isolate_for_14_days">Self isolate for 14 days</string>
    <string name="visit_a_medical_professional">Visit a medical professional</string>
    <string name="depression">Depression</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="fever">Fever</string>
    <string name="loss_of_smell_and_taste">Loss of smell and taste</string>
    <string name="russia">Russia</string>
    <string name="brazil">Brazil</string>
    <string name="china">China</string>
    <string name="united_states">United States</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="search_hint">search</string>
    <string name="loading">Loading</string>
</resources>
