<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="31dp"
            android:layout_marginRight="31dp">

            <TextView
                android:id="@+id/VaxTrax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vax Trax"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/VaxTrax"
                android:layout_marginTop="6dp"
                android:text="Information on the COVID-19 Pandemic"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/vaxtrax" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="Vaccine Development Stages"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="@string/preclinical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preclinicaltv" />

                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/phase_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phaseOne" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/phase_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phaseTwo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:text="@string/phase_3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phaseThree" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:text="@string/phase_4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phaseFour" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:text="@string/emergency_use_authorization" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emergencyUse" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>